--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </tr>
         <tr>
             <td>Task 1</td>
-            <td><a href="intro.html">Task 1 link</a></td>
+            <td><a href="intro.html">Task 1</a></td>
         </tr>
         <tr>
             <td>Task 2</td>
@@ -76,37 +76,115 @@
             <td>Task 5</td>
             <td><a href="register.html">Task 5</a></td>
         </tr>
+        
+    </table>
+    <h1>CSS Tasks</h1>
+    <table>
         <tr>
-            <td>Task 1 CSS</td>
-            <td><a href="tablecss.html">Task 6</a></td>
+            <th>Task Name</th>
+            <th>Task Link</th>
         </tr>
         <tr>
-            <td>Task 2 CSS</td>
-            <td><a href="task2csshor.html">Task 2 CSS</a></td>
+            <td>Task 1</td>
+            <td><a href="tablecss.html">Task 1</a></td>
         </tr>
         <tr>
-            <td>Task 2 CSS</td>
-            <td><a href="task2cssver.html">Task 2 CSS</a></td>
+            <td>Task 2</td>
+            <td><a href="task2csshor.html">Task 2</a></td>
         </tr>
         <tr>
-            <td>Task 3 CSS</td>
-            <td><a href="task3css.html">Task 3 CSS</a></td>
+            <td>Task 2</td>
+            <td><a href="task2cssver.html">Task 2</a></td>
         </tr>
         <tr>
-            <td>Task 4 CSS</td>
-            <td><a href="task4css.html">Task 4 CSS</a></td>
+            <td>Task 3</td>
+            <td><a href="task3css.html">Task 3</a></td>
         </tr>
         <tr>
-            <td>Task 5 CSS</td>
-            <td><a href="task5.html">Task 5 CSS</a></td>
+            <td>Task 4</td>
+            <td><a href="task4css.html">Task 4</a></td>
         </tr>
         <tr>
-            <td>Task 6 CSS</td>
-            <td><a href="task6.html">Task 6 CSS</a></td>
+            <td>Task 5</td>
+            <td><a href="task5.html">Task 5</a></td>
         </tr>
         <tr>
-            <td>Task 7 CSS</td>
-            <td><a href="task7.html">Task 7 CSS</a></td>
+            <td>Task 6</td>
+            <td><a href="task6.html">Task 6</a></td>
+        </tr>
+        <tr>
+            <td>Task 7</td>
+            <td><a href="task7.html">Task 7</a></td>
+        </tr>
+    </table>
+    <h1>Bootstrap Tasks</h1>
+    <table>
+        <tr>
+            <th>Task Name</th>
+            <th>Task Link</th>
+        </tr>
+        <tr>
+            <td>Task 1</td>
+            <td><a href="task1bs.html">Task 1</a></td>
+        </tr>
+        <tr>
+            <td>Task 2</td>
+            <td><a href="task2bs.html">Task 2</a></td>
+        </tr>
+        <tr>
+            <td>Task 3</td>
+            <td><a href="task3bs.html">Task 3</a></td>
+        </tr>
+        <tr>
+            <td>Task 4</td>
+            <td><a href="task4bs.html">Task 4</a></td>
+        </tr>
+        <tr>
+            <td>Task 5</td>
+            <td><a href="task5bs.html">Task 5</a></td>
+        </tr>
+        <tr>
+            <td>Task 6</td>
+            <td><a href="task6bs.html">Task 6</a></td>
+        </tr>
+    </table>
+    <h1>JavaScript Tasks</h1>
+    <table>
+        <tr>
+            <th>Task Name</th>
+            <th>Task Link</th>
+        </tr>
+        <tr>
+            <td>Task 1</td>
+            <td><a href="task1js.html">Task 1</a></td>
+        </tr>
+        <tr>
+            <td>Task 2</td>
+            <td><a href="task2js.html">Task 2</a></td>
+        </tr>
+        <tr>
+            <td>Task 3</td>
+            <td><a href="task3js.html">Task 3</a></td>
+        </tr>
+        <tr>
+            <td>Task 4</td>
+            <td><a href="task4js.html">Task 4</a></td>
+        </tr>
+        <tr>
+            <td>Task 5</td>
+            <td><a href="task5js.html">Task 5</a></td>
+        </tr>
+        <tr>
+            <td>Task 6</td>
+            <td><a href="task6js.html">Task 6</a></td>
+        </tr>
+        <tr>
+            <td>Task 7</td>
+            <td><a href="task7js.html">Task 7</a></td>
+        </tr>
+        <tr>
+            <td>Task 8</td>
+            <td><a href="task8js.html">Task 8</a></td>
         </tr>
     </table>
 </body>
