--- a/index.html
+++ b/index.html
@@ -187,5 +187,35 @@
             <td><a href="task8js.html">Task 8</a></td>
         </tr>
     </table>
+    <table>
+        <tr>
+            <th>Github repository Link</th>
+            <th>Vercel deploymnet Link</th>
+        </tr>
+        <tr>
+            <td><a href="https://github.com/Vinay0745/Reactjs_1">https://github.com/Vinay0745/Reactjs_1</a></td>
+            <td><a href="https://task1react-gules.vercel.app/">https://task1react-gules.vercel.app/</td>
+        </tr>
+        <tr>
+            <td><a href="https://github.com/Vinay0745/Calculator">https://github.com/Vinay0745/Calculator</td>
+            <td><a href="https://calculator-wine-eight.vercel.app/">https://calculator-wine-eight.vercel.app/</a></td>
+        </tr>
+        <tr>
+            <td><a href="https://github.com/Vinay0745/Task3react">https://github.com/Vinay0745/Task3react</a></td>
+            <td><a href="https://task3react-rosy.vercel.app/">https://task3react-rosy.vercel.app/</a></td>
+        </tr>
+        <tr>
+            <td><a href="https://github.com/Vinay0745/Task4react">https://github.com/Vinay0745/Task4react</a></td>
+            <td><a href="https://task4react-flax.vercel.app/">https://task4react-flax.vercel.app/</a></td>
+        </tr>
+        <tr>
+            <td><a href="https://github.com/Vinay0745/Task5">https://github.com/Vinay0745/Task5</a></td>
+            <td><a href="https://task5-gold.vercel.app/">https://task5-gold.vercel.app/</a></td>
+        </tr>
+        <tr>
+            <td><a href="https://github.com/Vinay0745/Task6">https://github.com/Vinay0745/Task6</a></td>
+            <td><a href="https://task6-rosy.vercel.app/">https://task6-rosy.vercel.app/</a></td>
+        </tr>
+    </table>
 </body>
 </html>
